[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/archivo-narrow/ArchivoNarrow-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/themes/default_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/images/category_images/art.png" type="Texture" id=3]
[ext_resource path="res://components/fx_box/answer_fx_box.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=4]
size = 23
font_data = ExtResource( 1 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.953781 )
colors = PoolColorArray( 0.180392, 0.203922, 0.270588, 0.729412, 0, 0.546875, 0.495605, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 47
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.953781 )
colors = PoolColorArray( 0, 0, 0, 0.588235, 1, 0.1875, 0, 1 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 8 )

[node name="fx_box" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="correct_fx" type="Node2D" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="correct_fx"]
position = Vector2( 301, 324 )
emitting = false
amount = 100
lifetime = 2.0
one_shot = true
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 128.0
spread = 45.14
gravity = Vector2( 0, -93 )
radial_accel = 27.03
scale_amount = 0.3

[node name="correct_answer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="correct_answer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="main_msg" type="Label" parent="correct_answer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 4 )
text = "Correct!"
align = 1

[node name="score" type="Label" parent="correct_answer/VBoxContainer"]
visible = false
margin_top = 66.0
margin_right = 600.0
margin_bottom = 99.0
text = "Score: 00"
align = 1

[node name="TextureRect" type="TextureRect" parent="correct_answer"]
self_modulate = Color( 1, 1, 1, 0.407843 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 3 )
expand = true

[node name="final_correct" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="final_correct"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="main_msg" type="Label" parent="final_correct/VBoxContainer"]
margin_right = 600.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 4 )
text = "Quiz Complete!"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="final_correct/VBoxContainer"]
margin_top = 31.0
margin_right = 600.0
margin_bottom = 397.0
theme = ExtResource( 2 )

[node name="quiz_complete_msg" type="Label" parent="final_correct/VBoxContainer/VBoxContainer"]
margin_right = 600.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 9 )
text = "Great Werk!"
align = 1

[node name="score" type="Label" parent="final_correct/VBoxContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 600.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 9 )
text = "Score: 00"
align = 1

[node name="Panel" type="Panel" parent="final_correct/VBoxContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 600.0
margin_bottom = 366.0
rect_min_size = Vector2( 0, 250 )
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="final_correct/VBoxContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="restart" type="Button" parent="final_correct/VBoxContainer/VBoxContainer/Panel/VBoxContainer"]
visible = false
margin_right = 600.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
text = "Restart Quiz"

[node name="main_menu" type="Button" parent="final_correct/VBoxContainer/VBoxContainer/Panel/VBoxContainer"]
margin_top = 54.0
margin_right = 600.0
margin_bottom = 104.0
rect_min_size = Vector2( 150, 50 )
text = "Main Menu"

[node name="TextureRect" type="TextureRect" parent="final_correct"]
self_modulate = Color( 1, 1, 1, 0.894118 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 3 )
expand = true

[node name="incorrect" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="incorrect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="main_msg" type="Label" parent="incorrect/VBoxContainer"]
margin_right = 600.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 4 )
text = "Incorrect"
align = 1

[node name="score" type="Label" parent="incorrect/VBoxContainer"]
visible = false
margin_top = 66.0
margin_right = 600.0
margin_bottom = 99.0
text = "Score: 00"
align = 1

[node name="TextureRect" type="TextureRect" parent="incorrect"]
self_modulate = Color( 1, 1, 1, 0.533333 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 6 )
expand = true

[node name="die_timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="final_correct/VBoxContainer/VBoxContainer/Panel/VBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="timeout" from="die_timer" to="." method="_on_die_timer_timeout"]
